[project]
name = "lamber"
dynamic = ["version"]
description = "Collect pytest execution data, provide consumption interfaces."
readme = "README.md"
authors = [{ name = "luizyao", email = "luizyao@163.com" }]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
]

[project.entry-points.pytest11]
lamber = "lamber.main"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-repeat>=0.9.4",
]


[tool.hatch.build.targets.wheel]
packages = ["src/lamber"]

[tool.hatch.version]
path = "src/lamber/__init__.py"
